--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -38,7 +38,8 @@ Neue Implementierungen / Funktionen:
 - APRS-Messenger: CQ-Calls (CQ*, ALL*, QST*) werden jetzt ausgewertet
   und Sysop benachrichtigt bei Empfang eine CQ-Nachricht
 - APRS-Messenger: Tabelle für empfangende Bulletin Nachrichten
-- APRS-Icons für APRS-SErvermonitor
+- APRS-Icons für APRS-Servermonitor
+- "Node-Liste" im APRS-Monitor
 
 ###########################################################################################################
 ###########################################################################################################
