updated/opt: guiAISmon.py - init procedure - limit length of Object-tab cleanup: aprs_station.py ais_mon_gui var added: guiMain.py _send_selected()

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -45,6 +45,8 @@ Neue Implementierungen / Funktionen:
 - "MSG-Paket Liste" im APRS-Monitor
 - "Bulletin-Paket Liste" im APRS-Monitor
 - Zusätzlicher Monitor in Tabellenansicht im Hauptfenster
+- QSO-Fenster Rechtsklick "Auswahl senden" - sendet ausgewählten Text oder
+  Kommando an Gegenstation
 
 ###########################################################################################################
 ###########################################################################################################
