added: "Map pointer" function ('<<TreeviewSelect>>' bindings) in guiAISmon.py added: Bytes and Packet Counter to Connection History added: Connection-History to guiBBS_fwd_q.py

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -66,6 +66,8 @@ Neue Implementierungen / Funktionen:
 - Tabelle für DX-Alarm-History in MH-Liste GUI
 - Tabelle für Verbindungsverlauf in Seitenfenter(Haupt-GUI)
 - Tabelle für Verbindungsverlauf in MH-Liste GUI
+- Tabelle für Verbindungsverlauf in BBS-Forwardwarteschlangen GUI
+- APRS-Icons (wenn bekannt) in MH-Liste
 
 ###########################################################################################################
 ###########################################################################################################
