changed: connection_history data-structure fixed: "1'st Setup Wizard" trigger updated: wguiSetup_app.py changed: guiMH.py get Locator and distance fm UserDB

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -72,7 +72,7 @@ Neue Implementierungen / Funktionen:
 - APRS-Icons (wenn bekannt) in MH-Liste
 - Simpler "First Setup" Wizard, mit Einstellungen für Sprache und
   GUI-Style. (Wird nach und nach erweitert)
-- Lokaler Converse-Mode (kein Ping-Pong Converse !)
+- Simpler lokaler Converse-Mode (kein Ping-Pong Converse !)
 
 ###########################################################################################################
 ###########################################################################################################
