--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -8,6 +8,8 @@ Fixes:
   wird, entsteht eine Endlosschleife, da die Nachricht nicht aus der
   FWD-Warteschlange entfernt wird (diesmal hoffentlich wirklich gefixt)
 - BBS-Fwd: "=" geflaggte Nachrichten werden nicht erneute zum Senden angeboten
+- BBS-FWD: Aus der GUI aus gesendete Nachrichten lösen ein "Forward-Task" aus
+  obwohl die Warteschlange noch nicht vollständig verarbeitet wurde
 
 Optimierung/Änderungen:
 
