added: guiBBS_fwd_q.py: Filters and icons implemented

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -12,6 +12,7 @@ Fixes:
   obwohl die Warteschlange noch nicht vollständig verarbeitet wurde
 
 Optimierung/Änderungen:
+- GUI Forward-Warteschlange: Filter und Icons implementiert
 
 Neue Implementierungen / Funktionen:
 - BBS: BIN-MODE optional wählbar für jeweiligen FWD-Partner
