fixed: GPIO settings: GPIOs without function assignments can be saved , but are not displayed in the overview

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -12,6 +12,8 @@ Fixes:
   obwohl die Warteschlange noch nicht vollständig verarbeitet wurde
 - Eingehende Verbindungen werden geblockt bzw. der Port block wird nicht
   freigegeben, wenn Port neu initialisiert wird
+- GPIO Einstellungen: GPIO ohne Funktionszuweisungen können gespeichert werden
+  , werden aber nicht in der Übersicht angezeigt
 
 Optimierung/Änderungen:
 - GUI Forward-Warteschlange: Filter und Icons implementiert
