opt/cleanup: tasker in guiMain.py added: cli-cmd "CSTAT" (Shows connection statistics for the last 7 days)

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -34,6 +34,7 @@ Optimierung/Änderungen:
 Neue Implementierungen / Funktionen:
 - BBS: BIN-MODE optional wählbar für jeweiligen FWD-Partner
 - CLI-CMD Converse: "U" - Gibt Lister der User im eigenen Kanal aus
+- CLI-CMD: "CSTAT" - Verbindungsstatistik der letzten 7 Tage
 
 ###########################################################################################################
 ###########################################################################################################
