--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -12,9 +12,10 @@ Fixes:
   obwohl die Warteschlange noch nicht vollständig verarbeitet wurde
 - Eingehende Verbindungen werden geblockt bzw. der Port block wird nicht
   freigegeben, wenn Port neu initialisiert wird
-- GPIO Einstellungen: GPIO ohne Funktionszuweisungen können gespeichert werden
-  , werden aber nicht in der Übersicht angezeigt
+- GPIO Einstellungen: GPIO ohne Funktionszuweisungen können gespeichert werden,
+  werden aber nicht in der Übersicht angezeigt
 - GPIO-Tool: Sysop Alarm wird nicht resetet
+- Kein Echo der ausgeführten Kommandos im eigenen Terminal
 
 Optimierung/Änderungen:
 - GUI Forward-Warteschlange: Filter und Icons implementiert
