--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -31,6 +31,7 @@ Optimierung/Änderungen:
   (Monitor u Mon-Tree sind bis zu 5 Minuten "nachgelaufen", obwohl die Datei-
   übertragung bereits beendet war, seit geraumer Zeit. Sollte jetzt nicht
   mehr vorkommen. Getestet auf einen PI4-4GB-RAM)
+- Diverse optimierungen für MacOS
 
 Neue Implementierungen / Funktionen:
 - BBS: BIN-MODE optional wählbar für jeweiligen FWD-Partner
