--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -3,8 +3,8 @@
 Fixes:
 
 Optimierung/Änderungen:
-- Soundmodul lässt auch alte "playsound" library zu für kompatibilität
-  zu Python Ver < 3.8 (Nur bei Linux)
+- Soundmodul überarbeitet
+- gTTS optional. (Wenn nicht installiert, wird es auch nicht verwendet.)
 
 Neue Implementierungen / Funktionen:
 
