fixed: BBS: The BID (Boxcall) is only updated after changing the settings and a program restart.
Results in BID: 000001NOCALL

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,10 +1,14 @@
 ###########################################################################################################
 # 2.122.x
 Fixes:
+- BBS: BID (Boxcall) wird nach verändern der Einstellungen erst nach Programm
+  neustart updated. Resultiert in  BID: 000001NOCALL
 
 Optimierung/Änderungen:
 - Soundmodul überarbeitet
 - gTTS optional. (Wenn nicht installiert, wird es auch nicht verwendet.)
+- Sprachausgabe/Sounds werden nicht unmittelbar nach dem Abschalten der
+  "Soundoption" beendet.
 
 Neue Implementierungen / Funktionen:
 
