updated: loc_fnc.py updated: guiLocatorCalc.py. Added Map

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -12,6 +12,7 @@ Optimierung/Änderungen:
   "Soundoption" beendet.
 
 Neue Implementierungen / Funktionen:
+- Karte/Map für Locator-Rechner
 
 ###########################################################################################################
 ###########################################################################################################
