updated: ax25Kiss.py: - debugging logs added - var > const cleanup
fixed: Only one frame is sent at a time.
opt/cleanup: ax25Connection.py

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -9,6 +9,7 @@ Fixes:
 - Gewählte Sprache für CLI wird nicht aktualisiert bzw. erst na reconnect
   gesetzt.
 - Fehlerhafte aprs-pakete führen zum Program-crash
+- Es wird immer nur ein Frame gesendet
 
 Optimierung/Änderungen:
 - Soundmodul überarbeitet
