updated cliMain.py: - CLI-CMD added: "PSTAT"  - Port Statistics - CLI-CMD added: "BWSTAT" - Port Band Usage (Last 10 Minutes)

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -19,6 +19,8 @@ Optimierung/Änderungen:
 
 Neue Implementierungen / Funktionen:
 - Karte/Map für Locator-Rechner
+- CLI-CMD: "PSTAT" - Port Statistiken
+- CLI-CMD: "BWSTAT" - Port Bandauslastung letzten 10 Minuten
 
 ###########################################################################################################
 ###########################################################################################################
