--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -22,6 +22,8 @@ Neue Implementierungen / Funktionen:
 - Karte/Map für Locator-Rechner
 - CLI-CMD: "PSTAT" - Port Statistiken
 - CLI-CMD: "BWSTAT" - Port Bandauslastung letzten 10 Minuten
+- Auto Max-Frame: Max-Frame wird automatisch angepasst, je nach Qualität
+  der Verbindung.
 
 ###########################################################################################################
 ###########################################################################################################
